<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/Insert"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_the_amount_of_time_spent_drinking_in_hours"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/Hours"
        android:hint="@string/hrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00a857"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:text="" />

    <Button
        android:id="@+id/ok"
        android:background="#1700b8"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />
</LinearLayout>